data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3872.wast
;; 1. **Test with Mismatched Argument Count on Import Call**:    - **Constraint Checked**: Ensures the imported function call handles argument count mismatch correctly.    - **Description**: Create a module importing a function requiring three arguments and call it with only two arguments. Check if the engines handle the argument count mismatch differently, particularly focusing on error reporting and stack state preservation.

(assert_invalid
  (module
    (import "env" "external_fn" (func $ext_fn (param i32 i32 i32)))
    (func (call $ext_fn (i32.const 1) (i32.const 2)))
  )
  "type mismatch"
)